--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.samyak2403.freevpnapp">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-
     <uses-permission
         android:name="android.permission.BIND_VPN_SERVICE"
         tools:ignore="ProtectedPermissions" />
-
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
@@ -20,13 +16,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/vpn"
+        android:icon="@drawable/vpnp"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/vpn"
+        android:roundIcon="@drawable/vpnp"
         android:supportsRtl="true"
         android:theme="@style/Theme.FreeVPNAPP"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".Activitys.AboutActivity"
+            android:exported="false" />
         <activity
             android:name=".Activitys.HomeActivity"
             android:exported="false" />
@@ -47,15 +46,10 @@
             <intent-filter>
                 <action android:name="android.net.VpnService" />
             </intent-filter>
-        </service>
-
-
-
-        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        </service> <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713"/>
-
+            android:value="@string/app_id" />
     </application>
 
 </manifest>
